--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
 .right {
   min-width: 100vw;
   min-height: 65vh;
+  position: relative;
 }
 
 @media (orientation: portrait) {
@@ -111,4 +112,19 @@ body {
 
 .product-hunt {
   margin-top: 1rem;
+}
+
+.beta-tester {
+  display: block;
+  background: gold;
+  color: black;
+  position: absolute;
+  padding: 10px;
+  font-size: 14px;
+  font-weight: bold;
+  text-decoration: none;
+  left: 0;
+  right: 0;
+  top: 0;
+  text-align: center;
 }
