--- a/style.css
+++ b/style.css
@@ -128,3 +128,14 @@ body {
   top: 0;
   text-align: center;
 }
+
+.cookies {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 10px;
+  z-index: 2;
+  font-size: small;
+  background-color: antiquewhite;
+}
