--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ body {
   color: black;
   position: absolute;
   padding: 10px;
-  font-size: 14px;
+  font-size: 1.25rem;
   font-weight: bold;
   text-decoration: none;
   left: 0;
