--- a/style.css
+++ b/style.css
@@ -77,6 +77,15 @@ body {
   }
 }
 
+.join-beta-testing {
+  padding: 1rem;
+  border-radius: 8px;
+  border: 0 none;
+  background: gold;
+  font-weight: bold;
+  font-size: 1.25rem;
+}
+
 .subtitle {
   color: #fafafa;
 }
