--- a/style.css
+++ b/style.css
@@ -78,12 +78,14 @@ body {
 }
 
 .join-beta-testing {
-  padding: 1rem;
-  border-radius: 8px;
-  border: 0 none;
+  display: inline-block;
+  text-decoration: none;
   background: gold;
-  font-weight: bold;
+  padding: .75rem 1.25rem;
+  border-radius: 8px;
+  color: black;
   font-size: 1.25rem;
+  font-weight: bold;
 }
 
 .subtitle {
